# shimkit

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  NPM_SETUP.md  PYPI_SETUP.md  README.md  SECURITY.md  java_update_manager.py  prompt.md  pyproject.toml
.design/: architecture-current.md  architecture-target.md  version-constraints-spec.md
.design/plans/: feature-gap-analysis.md  migration-plan.md  validation-report.md
.design/plans/_workspace/: risk-flags.md  source-inventory.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: shimkit.example.json  shimkit.schema.json
docs/: README.md  architecture.md  configuration.md  installation.md  onboarding.md  release.md  shipping-checklist.md  validation-scope.md
docs/plans/: cleanup-2026-05-14.md  future-additions.md  known-issues.md  shipping-audit.md  v0.3.0-new-tools.md  v0.4.0-new-tools.md
docs/release-notes/: v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.2.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.8.0.md  v0.9.0.md
docs/tools/: adguard.md  cron.md  db.md  dns.md  docker-clean.md  env.md  framework-django.md  framework-laravel.md  framework-symfony.md  gpg.md  hosts.md  java.md  logs.md  ports.md  shell.md  ssh.md  stack.md  tls.md  web.md
installer/: RELEASE.md  homebrew-formula.rb.template  install.sh
scripts/: test_adguard_mutating.sh
src/shimkit/: __init__.py  __main__.py  cli.py  self_update.py
src/shimkit/config/: __init__.py  defaults.json  errors.py  loader.py  schema.py
src/shimkit/core/: __init__.py  cli_flags.py  command.py  docker.py  host_service.py  json_event.py  log.py  menu.py  pkgmgr.py  platform.py  shell.py  systemd.py  ui.py  version.py
src/shimkit/tools/: __init__.py
src/shimkit/tools/adguard/: __init__.py  api.py  commands.py  finder.py  manager.py  models.py  ports.py  resolv.py  yaml_editor.py
src/shimkit/tools/cron/: __init__.py  commands.py  manager.py  models.py  parser.py
src/shimkit/tools/db/: __init__.py  commands.py  manager.py  models.py
src/shimkit/tools/db/engines/: __init__.py  base.py  mariadb.py  mongo.py  mysql.py  phpmyadmin.py  postgres.py  redis.py
src/shimkit/tools/dns/: __init__.py  commands.py  fixer.py  manager.py  models.py  networksetup.py  scutil.py
src/shimkit/tools/docker_clean/: __init__.py  client.py  commands.py  desktop.py  manager.py  models.py  pruner.py  schedule.py
src/shimkit/tools/env/: __init__.py  commands.py  manager.py  models.py  parser.py
src/shimkit/tools/framework/: __init__.py  commands.py
src/shimkit/tools/framework/django/: __init__.py  commands.py  manager.py
src/shimkit/tools/framework/laravel/: __init__.py  commands.py  manager.py
src/shimkit/tools/framework/symfony/: __init__.py  commands.py  manager.py
src/shimkit/tools/gpg/: __init__.py  commands.py  manager.py  models.py  parser.py
src/shimkit/tools/hosts/: __init__.py  commands.py  editor.py  manager.py
src/shimkit/tools/java/: __init__.py  brew.py  commands.py  installer.py  manager.py  models.py  oracle.py  scanner.py
src/shimkit/tools/logs/: __init__.py  commands.py  manager.py
src/shimkit/tools/ports/: __init__.py  commands.py  manager.py  models.py  owners.py
src/shimkit/tools/shell/: __init__.py  colors.py  commands.py  manager.py  upgrader.py
src/shimkit/tools/ssh/: __init__.py  commands.py  manager.py  models.py  scanner.py
src/shimkit/tools/stack/: __init__.py  commands.py  lemp.py  manager.py
src/shimkit/tools/tls/: __init__.py  certbot.py  commands.py  manager.py  models.py
src/shimkit/tools/web/: __init__.py  commands.py
src/shimkit/tools/web/nginx/: __init__.py  commands.py  manager.py  templates.py
tests/: conftest.py  test_config.py  test_core.py  test_core_coverage_v010.py  test_core_docker.py  test_core_version.py  test_coverage_v010_cli.py  test_coverage_v010_cli2.py  test_coverage_v010_db_extra.py  test_coverage_v010_dns_gpg.py  test_coverage_v010_dns_mgr.py  test_coverage_v010_final.py  test_coverage_v010_gpg_web.py  test_coverage_v010_hosts_extra.py  test_coverage_v010_java_manager.py  test_coverage_v010_managers.py  test_coverage_v010_managers2.py  test_coverage_v010_menus.py  test_coverage_v010_more.py  test_coverage_v010_ssh_scanner.py  test_coverage_v010_tools.py  test_legacy_shim.py  test_self_update.py  test_smoke.py  test_tools_adguard.py  test_tools_cron.py  test_tools_db.py  test_tools_db_on_host.py  test_tools_db_redis.py  test_tools_dns.py  test_tools_docker_clean.py  test_tools_env.py  test_tools_framework_django.py  test_tools_framework_laravel.py  test_tools_framework_symfony.py  test_tools_gpg.py  test_tools_hosts.py  test_tools_java.py  test_tools_logs.py  test_tools_ports.py  (+8 more)
