[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "shimkit"
version = "0.2.0"
description = "A toolkit of developer utilities — Java version manager, shell upgrader, and more. Python tools, shimmed by bash."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Simtabi LLC", email = "opensource@simtabi.com" }]
maintainers = [{ name = "Imani Manyara", email = "imani@simtabi.com" }]
keywords = ["cli", "java", "jdk", "openjdk", "shell", "developer-tools", "homebrew", "version-manager"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.15",
  "rich>=13.9",
  "questionary>=2.0",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-mock>=3.14",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.13",
  "bandit>=1.7",
  "pip-audit>=2.7",
  # Tools' optional-extra deps land in [dev] so tests exercise them
  # in CI. Production users still install per-tool extras explicitly
  # (uv tool install 'shimkit[adguard]', etc.).
  "ruamel.yaml>=0.18",
  "requests>=2.32",
  "psutil>=6.0",
  "docker>=7.1",
  "dnspython>=2.7",
]
# Per-tool optional extras. The base `shimkit` install is intentionally
# lean; users add the extras they need. `extra-tools` is the umbrella.
dns          = ["dnspython>=2.7"]
adguard      = ["ruamel.yaml>=0.18", "requests>=2.32", "psutil>=6.0"]
docker-clean = ["docker>=7.1"]
extra-tools  = [
  "dnspython>=2.7",
  "ruamel.yaml>=0.18",
  "requests>=2.32",
  "psutil>=6.0",
  "docker>=7.1",
]

[project.scripts]
shimkit = "shimkit.cli:app"

[project.urls]
Homepage      = "https://opensource.simtabi.com/shimkit"
Documentation = "https://opensource.simtabi.com/documentation/shimkit"
Repository    = "https://github.com/simtabi/shimkit"
Issues        = "https://github.com/simtabi/shimkit/issues"
Changelog     = "https://github.com/simtabi/shimkit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/shimkit"]

[tool.hatch.build.targets.wheel.force-include]
"src/shimkit/config/defaults.json" = "shimkit/config/defaults.json"
"src/shimkit/py.typed" = "shimkit/py.typed"

[tool.hatch.build.targets.sdist]
include = ["src/shimkit", "tests", "config", "installer", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
# Surface real warnings as errors, but tolerate third-party deprecation
# noise so future Python / library releases don't flake CI.
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Typer uses callable defaults in function signatures as its public API.
# B008 would otherwise flag every command we declare.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/shimkit"]
plugins = ["pydantic.mypy"]

# Modules pulled in by per-tool optional extras. mypy strict otherwise
# refuses to type-check a tree where the extras aren't installed (which
# is the default CI situation — CI installs `[dev]`, not `[extra-tools]`).
[[tool.mypy.overrides]]
module = [
    "docker",
    "docker.*",
    "dns",
    "dns.*",
    "psutil",
    "requests",
    "ruamel",
    "ruamel.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
